--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="shortcut icon" sizes="32" href="assets/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
-    <script defer src="js/app.js"></script>
+    <script defer src="js/bundle/app.bundle.js"></script>
 </head>
 <body>
     <main class="card">
